@@ -1,4 +1,5 @@
 Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
+- Add Replace button
 - Cleaned up new arguments editor
 
 Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
